Add several eventpipe tests

--- a/tests/src/tracing/eventpipe/eventsvalidation/Contention.csproj
+++ b/tests/src/tracing/eventpipe/eventsvalidation/Contention.csproj
@@ -8,7 +8,7 @@
     <CLRTestPriority>1</CLRTestPriority>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="GCEvents.cs" />
+    <Compile Include="Contention.cs" />
     <ProjectReference Include="../common/common.csproj" />
   </ItemGroup>
 </Project>
