--- a/tests/src/tracing/eventpipe/eventsvalidation/ThreadPool.csproj
+++ b/tests/src/tracing/eventpipe/eventsvalidation/ThreadPool.csproj
@@ -8,7 +8,7 @@
     <CLRTestPriority>1</CLRTestPriority>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="GCEvents.cs" />
+    <Compile Include="ThreadPool.cs" />
     <ProjectReference Include="../common/common.csproj" />
   </ItemGroup>
 </Project>
